--- a/app/views/game/show.html.erb
+++ b/app/views/game/show.html.erb
@@ -1,8 +1,8 @@
 <% content_for :javascript do %>
   <link href="/assets/screen.css" media="screen" rel="stylesheet" type="text/css">
   <link href="http://fonts.googleapis.com/css?family=Nosifer" rel="stylesheet" type="text/css">
-  <script src='https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"'</script>
-  <script src='/assets/main.js'></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"</script>
+  <script src="/assets/main.js"></script>
 <%end%>
 
 <h1>Guess-the-Number</h1>
